--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set default behaviour, in case users don't have core.autocrlf set.
-* text=auto
+* text=lf
 
 # Explicitly declare text files we want to always be normalized and converted 
 # to native line endings on checkout.
@@ -7,13 +7,16 @@
 *.c 	text
 *.h 	text
 *.hpp 	text
-*.l 	text
-*.y 	text
 *.html	text
 *.css	text
+*.hjs	text
+*-less	text
+*.js	text
+*.json	text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
+*.njsproj text eol=crlf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
