--- a/website/package.json
+++ b/website/package.json
@@ -9,11 +9,11 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "hjs": "~0.0.6",
     "less-middleware": "1.0.x",
     "morgan": "~1.6.1",
-    "mysql": "^2.9.0",
+    "mysql": "^2.11.1",
     "serve-favicon": "~2.3.0"
   }
 }
