--- a/website/package.json
+++ b/website/package.json
@@ -6,14 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "^4.13.4",
-    "hjs": "~0.0.6",
-    "less-middleware": "1.0.x",
-    "morgan": "~1.6.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
+    "express": "^4.16.0",
+    "hjs": "^0.0.6",
+    "less-middleware": "^3.0.0",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.11.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.5.0"
   }
 }
